RESOLVED FIXED11054
REGRESSION: Traditional Chinese encoding in login authentication
https://bugs.webkit.org/show_bug.cgi?id=11054
Summary REGRESSION: Traditional Chinese encoding in login authentication
Leevl
Reported 2006-09-27 05:04:31 PDT
This simplified Chinese site interprets/encodes one traditional Chinese character of my username unproperly during the login authentication. This character displays correctly in the input field of the login page, but turns scratched on the pop-up with a warning of "username A??BC doesn't exist". This bug does not exist in built-in Safari(419.3) and firefox(1.5-2.0b)
Attachments
proposed fix (17.53 KB, patch)
2006-10-04 13:54 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2006-09-27 06:44:00 PDT
Could you please tell which character causes this problem?
Leevl
Comment 2 2006-09-28 04:59:48 PDT
(In reply to comment #1) > Could you please tell which character causes this problem? > ¹P£¨pen£©
Alexey Proskuryakov
Comment 3 2006-09-28 07:50:05 PDT
Confirmed, we now encode this character, as if it weren't present in the encoding. Another (probably related) issue with this page: although it specifies its charset as gb2312 and is rendered correctly by default, it is rendered as garbage in TOT if the charset is set to GB 2312 manually via Text Encoding menu.
Alexey Proskuryakov
Comment 4 2006-10-04 13:54:11 PDT
Created attachment 10915 [details] proposed fix This patch fixes both issues; also, we now correctly handle the euro symbol (something that stock Safari doesn't do). For more information, see: <http://en.wikipedia.org/wiki/GB2312>. I do not know why ICU has such a behavior with GB_2312-80.
Darin Adler
Comment 5 2006-10-05 07:42:40 PDT
Comment on attachment 10915 [details] proposed fix I would have done it slightly differently (for example, I don't normally use !strcmp for string equality; I like strcmp == 0 because it has an "==" in it), but this looks good. r=me
Alexey Proskuryakov
Comment 6 2006-10-05 09:49:02 PDT
Committed revision 16807. (In reply to comment #5) > I like strcmp == 0 because it has an "==" in it), Heh, so do I - but somehow I thought that WebKit style was !strcmp :). Corrected.
Alexey Proskuryakov
Comment 7 2006-10-05 14:02:16 PDT
Reporter, could you please verify that this issue is fixed in the latest nightly build from <http://nightly.webkit.org>?
Note You need to log in before you can comment on or make changes to this bug.