        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=11054
        REGRESSION: Traditional Chinese encoding in login authentication

        1. Treat GB2312 encoding as GBK (its more modern superset), to match other browsers.
        2. On the Web, GB2312 is encoded as EUC-CN or HZ, while ICU provides a native encoding
        for encoding GB_2312-80 and several others. So, we need to override this behavior, too.

WebCore:
        * platform/StreamingTextDecoderICU.cpp:
        (WebCore::TextCodecICU::registerEncodingNames):

LayoutTests:
        Each of these tests is passed by Firefox 1.5 and/or WinIE 6.

        * fast/encoding/GBK/EUC-CN-expected.txt: Added.
        * fast/encoding/GBK/EUC-CN.html: Added.
        * fast/encoding/GBK/chinese-expected.txt: Added.
        * fast/encoding/GBK/chinese.html: Added.
        * fast/encoding/GBK/cn-gb-expected.txt: Added.
        * fast/encoding/GBK/cn-gb.html: Added.
        * fast/encoding/GBK/csgb2312-expected.txt: Added.
        * fast/encoding/GBK/csgb2312.html: Added.
        * fast/encoding/GBK/csgb231280-expected.txt: Added.
        * fast/encoding/GBK/csgb231280.html: Added.
        * fast/encoding/GBK/gb2312-expected.txt: Added.
        * fast/encoding/GBK/gb2312.html: Added.
        * fast/encoding/GBK/gb_2312-80-expected.txt: Added.
        * fast/encoding/GBK/gb_2312-80.html: Added.
        * fast/encoding/GBK/gbk-expected.txt: Added.
        * fast/encoding/GBK/gbk.html: Added.
        * fast/encoding/GBK/iso-ir-58-expected.txt: Added.
        * fast/encoding/GBK/iso-ir-58.html: Added.
        * fast/encoding/GBK/x-euc-cn-expected.txt: Added.
        * fast/encoding/GBK/x-euc-cn.html: Added.
        * fast/encoding/GBK/x-gbk-expected.txt: Added.
        * fast/encoding/GBK/x-gbk.html: Added.



Canonical link: https://commits.webkit.org/14109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16807 268f45cc-cd09-0410-ab3c-d52691b4dbfc